--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://ajax.googleapis.com/ajax.libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/bootsrtap.min.js"></script>
+    <!-- <script src="js/bootsrtap.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
   </body>
