--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,5 +40,6 @@
     <!-- <script src="js/bootsrtap.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
   </body>
 </html>
