--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,9 +17,10 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-
-    <script src="https://ajax.googleapis.com/ajax.libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/bootsrtap.min.js"></script>
+    
+    <script src="moment.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
